update status code
