# docs/swagger.json
@@ -516,7 +516,7 @@
           }
         ],
         "responses": {
-          "204": {
+          "200": {
             "description": "Successfully deleted a contact.",
             "content": {
               "application/json": {
@@ -530,7 +530,7 @@
                   "properties": {
                     "status": {
                       "type": "integer",
-                      "example": 204
+                      "example": 200
                     },
                     "message": {
                       "type": "string",
