# src/controllers/contacts.js
@@ -132,8 +132,8 @@ export const deleteContactController = async (req, res) => {
     throw createHttpError(404, "Contact not found");
   }
 
-  res.status(204).json({
-    status: 204,
+  res.status(200).json({
+    status: 200,
     message: "Successfully deleted the contact!",
     data: contact,
   });
